# cq_warehouse

./: .gitignore  .readthedocs.yaml  README.md  setup.cfg
doc/: chain.rst  conf.py  cq_title_image.py  drafting.rst  extensions.rst  fastener.rst  fastener_diagrams.py  index.rst  installation.rst  requirements.txt  sprocket_and_chain_diagrams.py
docs/: bearing.rst  chain.rst  conf.py  drafting_diagrams.py  extensions.rst  fastener.rst  finger_jointed_boxes.rst  index.rst  installation.rst  requirements.txt  sprocket.rst  subclassing.rst  thread.rst
examples/: align_fastener_holes.py  bolt_plates_together.py  brad_tee_and_heatset_nuts.py  captive_nuts.py  chain_examples.py  cylinder_with_holes.py  drafting_dimension_diagonal.py  drafting_examples.py  embossing.py  extensions_examples.py  finger_jointed_boxes.py  flag_of_Ukraine.py  map_texture_examples.py  pillow_block.py  plastic_bottle_funnel.py  projection.py  screw_at_depth.py  sprocket_examples.py  subclass_examples.py  text_on_path.py  thread_examples.py  utah_teapot.py
scripts/: build_cadquery_patch.py  build_extensions_doc.py  cadquery_extensions.patch  cadquery_extensions0.5.1.patch  skt_parse_table.py
src/chain/: README.md  chain.py  chain_examples.py
src/cq_warehouse/: __init__.py  bearing.py  bradteenut.py  chain.py  (+58 more)
src/cq_warehouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: bearing_tests.py  drafting_tests.py  extensions_finger_joint_tests.py  extensions_tests.py  fastener_tests.py  map_texture_tests.py  sketch_tests.py  sprocket_and_chain_tests.py  sub-class_tests.py  thread_tests.py
(+2 files in other folders)
